fixed fieldset bleed

--- a/sass/modules/_Form2.module.scss
+++ b/sass/modules/_Form2.module.scss
@@ -61,7 +61,6 @@
             color: general.$primary-color-light;
             padding-left: .25rem;
             padding-right: .25rem;
-            box-shadow: inset 2px 2px 3px 2px general.$grey-500;
         }
     }
 }
